Fix overflow in user page, use common cards/activity components

--- a/src/components/Pages/User/index.scss
+++ b/src/components/Pages/User/index.scss
@@ -1,7 +1,7 @@
 #user-profile {
   margin-top: 20px;
   .avatar {
-    font-size: 1000%;
+    font-size: 800%;
     margin-right: 20px;
   }
 }
